# susykit

./: .gitignore  .gitlab-ci.yml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.rst
include/: .gitignore  darksusy_interface.hpp  dict.hpp  feynhiggs_interface.hpp  get_slha.hpp  hepstats.hpp  libconstrain.hpp  libsusykit.hpp  micromegas_interface.hpp  model.hpp  parse.hpp  softsusy_opts.hpp  superiso_interface.hpp
include/constrain/: dict.hpp  experimental_data.hpp  gaussian_datum.cpp  gaussian_datum.hpp  get_slha.hpp  hepstats.hpp  interpolated_data.cpp  interpolated_data.hpp  likeconfig.hpp  likedatum.hpp  loglike.hpp  model.hpp  model_lookup.hpp  parse.hpp  parseutils.hpp  simple_datum.cpp  simple_datum.hpp  special_lookups.hpp
include/libconstrain/: likeconfig.hpp  likedatum.hpp  model_lookup.hpp
include/libsusykit/: darksusy_interface.hpp  feynhiggs_interface.hpp  micromegas_interface.hpp  softsusy_interface.hpp  softsusy_opts.hpp  superiso_interface.hpp
include/susykit/: darksusy_interface.hpp  feynhiggs_interface.hpp  micromegas_interface.hpp  softsusy_interface.hpp  softsusy_opts.hpp  superiso_interface.hpp
mpiscan/: Makefile  gen3_scalar.cpp  gsugra_mu.cpp  light_chargino.cpp  light_gluino.cpp  mSUGRA.cpp  mSUGRA_relax_mh0.cpp  main.cpp  mpiscan.cpp  mpiscan.hpp  nuhm.cpp  seedgen.cpp  seedgen.hpp
nested/: Makefile  heavy_gluino.cefr.cpp  heavy_gluino.cpp  heavy_gluino.new.cpp  mSUGRA.cpp  multinest.cpp  multinest.hpp  nestface.BK_DBG.cpp  nestface.cpp  nestface.hpp  priors.cpp  priors.hpp  susykitNS.cpp
patches/darksusy/: dsinit.patch
patches/feynhiggs/: extself_c.patch
patches/higgsbounds/: configure.patch
patches/softsusy/: softpars_h.patch
patches/superiso/: include_h.patch
src/: Makefile  constrain.cpp  constrain_opts.cpp  constrain_opts.hpp  constraint.cpp  constraint.hpp  darksusy_interface.cpp  darktest.cpp  feynhiggs_interface.cpp  feyntest.cpp  gen_seeds.cpp  get_slha.cpp  hepstats_test.cpp  init_susytik.cpp  isotest.cpp  likeconfig.cpp  likeconfig.hpp  likedatum.cpp  loglike.cpp  micromegas_interface.cpp  model.cpp  model_lookup.cpp  model_lookup.hpp  parse.cpp  parseutils.hpp  point_opts.hpp  qparse.cpp  qpoint.cpp  qpoint_softsusy_opts.cpp  qpoint_softsusy_opts.hpp  sdb2slha.cpp  softest.cpp  softsusy_interface.cpp  softsusy_interface.hpp  softsusy_opts.cpp  softsusy_opts.hpp  special_lookups.cpp  suj_slha_out.cpp  sujfeyn.cpp  sujfeyn.hpp  (+16 more)
src/constrain/: distribution.cpp  distribution.hpp  experimental_data.cpp  experimental_data.hpp  gaussian.cpp  gaussian.hpp  gaussian_datum.cpp  get_slha.cpp  interpolated_data.cpp  interpolated_data.hpp  likeconfig.cpp  likedatum.cpp  loglike.cpp  model.cpp  model_lookup.cpp  model_lookup.hpp  parse.cpp  parseutils.cpp  parseutils.hpp  simple_datum.cpp  simple_datum.hpp  smeared_limit.cpp  smeared_limit.hpp  smeared_lower_limit.cpp  smeared_lower_limit.hpp  smeared_upper_limit.cpp  smeared_upper_limit.hpp  special_lookups.cpp  upper_gaussian.cpp  upper_gaussian.hpp  upper_gaussian_datum.cpp  upper_gaussian_datum.hpp
src/constrain-bin/: chi2_constraint.cpp  chi2_constraint.hpp  constrain.cpp  constrain_opts.cpp  constrain_opts.hpp  constraint.cpp  constraint.hpp  datum_constraint.cpp  datum_constraint.hpp
src/hepstats/: Makefile  hepstats.hpp  likeconfig.cpp  likeconfig.hpp  likedatum.cpp  likedatum.hpp  loglike.cpp  loglike.hpp  test.conf  test.cpp
src/nested/: Makefile  heavy_gluino.cefr.cpp  heavy_gluino.cpp  multinest.cpp  multinest.hpp  nestface.cpp  nestface.h  nestface.mSUGRA.cpp  nusugra_SO10_210plet_15_3.cpp  nusugra_SO10_770plet_1_1.cpp  nusugra_SO10_770plet_84_1.cpp  nusugra_SU5_24plet.cpp  nusugra_mq_ml.cpp  priors.hpp  susytikNS.cpp  test.conf  test.pbs
src/nested/old/: nusugra_SO10_210plet_15_1.cpp  nusugra_SO10_210plet_1_1.cpp  nusugra_SU5_200plet.cpp  nusugra_SU5_75plet.cpp  nusugra_heavy_gluino.cpp  nusugra_higgs.cpp
src/neuronet/: neuronet.hpp
src/old/: point_opts.cpp  point_opts.hpp
src/old-scanner/: gen_seeds.cpp  susykit_init.cpp  susykit_scan.cpp
src/qparse/: qparse.cpp
src/qpoint/: qpoint.cpp  qpoint_softsusy_opts.cpp  qpoint_softsusy_opts.hpp
src/sdb2slha/: sdb2slha.cpp
src/susykit/: darksusy_interface.cpp  feynhiggs_interface.cpp  micromegas_interface.cpp  softsusy_interface.cpp  softsusy_opts.cpp  superiso_interface.cpp
src/testing/: darktest.cpp  feyntest.cpp  hepstats_test.cpp  isotest.cpp  softest.cpp
test/: CMakeLists.txt  test.conf
test/old/: test2.conf
test/src/: catch_main.cpp  unit-basic.cpp
